--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -1,3 +1,12 @@
 {
-  "appName": "Demo App"
+  "appName": "Next Power",
+  "login": "Login",
+  "pleaseEnterTheDetailsBelowToContinue": "Please enter the details below to continue",
+  "byContinuingYouAgreeToOur": "By continuing, you agree to our",
+  "mobileNumber": "Mobile Number",
+  "continueLabel": "Continue",
+  "termsAndConditions": "Terms & Conditions",
+  "privacyPolicy": "Privacy Policy",
+  "a": "",
+  "a": ""
 }
