--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -7,6 +7,12 @@
   "continueLabel": "Continue",
   "termsAndConditions": "Terms & Conditions",
   "privacyPolicy": "Privacy Policy",
+  "enterOtp": "Enter OTP",
+  "enterOtpSentTo": "Enter the 4-digit OTP that was sent to",
+  "enterValidOtp": "Enter valid OTP",
+  "invalidOtp": "Invalid OTP",
+  "resendOtp": "Resend OTP",
+  "changePhoneNumber": "Change Phone Number",
   "a": "",
   "a": ""
 }
