--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -24,5 +24,12 @@
   "enterValidEmailAddress": "Enter a valid email address",
   "emailShouldntBeEmpty": "Email address shouldn't be empty",
   "mobileNumberShouldntBeEmpty": "Mobile Number should n't be empty",
+  "done": "Done",
+  "error": "Error",
+  "somethingWentWrongPleaseTryAgainLater": "Something went wrong. Please try again later",
+  "kindlyValidateAllFieldsAndTryAgain": "Kindly validate all fields and try again",
+  "verify": "Verify",
+  "profile": "Profile",
+  "a": "",
   "a": ""
 }
