--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -30,6 +30,6 @@
   "kindlyValidateAllFieldsAndTryAgain": "Kindly validate all fields and try again",
   "verify": "Verify",
   "profile": "Profile",
-  "a": "",
+  "pleaseEnterTheNumberToChange": "Please enter the number to change",
   "a": ""
 }
