my vehicle list and add/edit completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -31,5 +31,10 @@
   "verify": "Verify",
   "profile": "Profile",
   "pleaseEnterTheNumberToChange": "Please enter the number to change",
+  "myVehicles": "My Vehicles",
+  "make": "Make",
+  "model": "Model",
+  "number": "Number",
+  "vehicle": "Vehicle",
   "a": ""
 }
