station details started

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -55,8 +55,10 @@
   "support": "Support",
   "aboutUs": "About us",
   "logout": "Logout",
-  "a": "",
-  "a": "",
+  "connectors": "Connectors",
+  "overview": "Overview",
+  "all": "All",
+  "free": "Free",
   "a": "",
   "a": ""
 }
