station details connectors list completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -59,6 +59,11 @@
   "overview": "Overview",
   "all": "All",
   "free": "Free",
+  "kw": "KW",
+  "tariff": "Tariff",
+  "charge": "Charge",
+  "reserve": "Reserve",
+  "a": "",
   "a": "",
   "a": ""
 }
