--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -1,6 +1,7 @@
 {
   "appName": "Next Power",
   "login": "Login",
+  "signup": "Signup",
   "pleaseEnterTheDetailsBelowToContinue": "Please enter the details below to continue",
   "byContinuingYouAgreeToOur": "By continuing, you agree to our",
   "mobileNumber": "Mobile number",
