charging session completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -71,7 +71,20 @@
   "amenities": "Amenities",
   "noSuchStationsFound": "No such stations found",
   "oops": "Oops",
-  "a": "",
-  "a": "",
+  "noConnectorsFound": "No connectors Found",
+  "sorry": "Sorry",
+  "pricing": "Pricing",
+  "power": "Power",
+  "type": "Type",
+  "chargingOptions": "Charging options",
+  "startCharging": "Start charging",
+  "money": "Money",
+  "time": "Time",
+  "energy": "Energy",
+  "set": "Set",
+  "budget": "Budget",
+  "duration": "Duration",
+  "minutes": "minutes",
+  "kwh": "KWH",
   "a": ""
 }
