error changes client mentioned

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -50,6 +50,7 @@
   "shouldntBeEmpty": "shouldn't be empty",
   "choose": "Choose",
   "station": "Station",
+  "stations": "Stations",
   "wallet": "Wallet",
   "chargingHistory": "Charging history",
   "rfidTag": "RFID tag",
