home screen completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -53,6 +53,7 @@
   "stations": "Stations",
   "wallet": "Wallet",
   "chargingHistory": "Charging history",
+  "history": "History",
   "rfidTag": "RFID tag",
   "support": "Support",
   "aboutUs": "About us",
