--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -91,7 +91,7 @@
   "kwh": "KWH",
   "submit": "Submit",
   "noDataFound": "No data found",
-  "a": "",
+  "noFavoritesYet": "No favorites yet",
   "a": "",
   "a": ""
 }
