--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -92,6 +92,8 @@
   "submit": "Submit",
   "noDataFound": "No data found",
   "noFavoritesYet": "No favorites yet",
+  "active": "Active",
+  "distance": "Distance",
   "a": "",
   "a": ""
 }
