--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -100,7 +100,7 @@
   "endTime": "End time",
   "success": "Success",
   "pendingInvoice": "Pending invoice",
-  "a": "",
+  "details": "Details",
   "a": "",
   "a": "",
   "a": "",
