support screen completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -112,6 +112,8 @@
   "addMoneyToYourWallet": "Add money to your wallet",
   "chargeYourEvAtAnyStations": "Charge your EV at any stations",
   "proceedToPay": "Proceed to pay",
+  "charging": "Charging",
+  "billing": "Billing",
   "a": "",
   "a": ""
 }
