about us completed

--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -114,6 +114,6 @@
   "proceedToPay": "Proceed to pay",
   "charging": "Charging",
   "billing": "Billing",
-  "a": "",
+  "contactUs": "Contact us",
   "a": ""
 }
