--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -115,5 +115,6 @@
   "charging": "Charging",
   "billing": "Billing",
   "contactUs": "Contact us",
-  "failed": "Failed"
+  "failed": "Failed",
+  "internal_server_error": "INTERNAL SERVER ERROR"
 }
