--- a/assets/locales/en_US.json
+++ b/assets/locales/en_US.json
@@ -32,12 +32,12 @@
   "verify": "Verify",
   "profile": "Profile",
   "pleaseEnterTheNumberToChange": "Please enter the number to change",
-  "myVehicles": "My Vehicles",
+  "myVehicles": "My vehicles",
   "make": "Make",
   "model": "Model",
   "number": "Number",
   "vehicle": "Vehicle",
-  "myAddress": "My Address",
+  "myAddress": "My address",
   "address": "Address",
   "addressLine1": "Address line 1",
   "addressLine2": "Address line 2",
